# opensaml-rs

./: .gitignore  .worktreeinclude  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PARITY.md  README.md  RELEASE.md  SECURITY.md  clippy.toml  deny.toml  lefthook.yml  release-plz.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: audit.yml  auto-label.yml  ci.yml  release-plz.yml  release.yml  zizmor.yml
crates/open-saml/: Cargo.toml  README.md
crates/open-saml/src/: lib.rs
crates/opensaml/: Cargo.toml  README.md
crates/opensaml/examples/: sso.rs
crates/opensaml/src/: authn.rs  constants.rs  context.rs  entity.rs  error.rs  flow.rs  idp.rs  lib.rs  logout.rs  metadata.rs  response.rs  sp.rs  template.rs  util.rs  validator.rs
crates/opensaml/src/binding/: deflate.rs  encoding.rs  mod.rs  post_form.rs  redirect.rs
crates/opensaml/src/crypto/: bergshamra.rs  enc.rs  keys.rs  mod.rs  sign.rs  verify.rs
crates/opensaml/src/idp/: login_response.rs
crates/opensaml/src/metadata/: generate.rs  idp.rs  mod.rs  sp.rs
crates/opensaml/src/xml/: dom.rs  extract.rs  fields.rs  mod.rs  write.rs
crates/opensaml/tests/: authn_request_options.rs  binding.rs  conformance.rs  flow_conformance.rs  hardening.rs  idp_tag_prefixes.rs  index_conformance.rs  logout_session_index.rs  no_default_features.rs  redirect_inflate_limit.rs  reexport.rs  robustness.rs  xml_injection.rs  xsw.rs
crates/rust-saml/: Cargo.toml  README.md
crates/rustsaml/: Cargo.toml  README.md
crates/rustsaml/src/: lib.rs
crates/rustsaml/tests/: reexport.rs
crates/saml-rs/: Cargo.toml  README.md
crates/saml-rs/tests/: alias.rs
crates/samlet/: Cargo.toml  README.md
crates/samlet/src/: lib.rs
crates/samlet/tests/: reexport.rs
crates/samlify/: Cargo.toml  README.md
crates/samlify/src/: lib.rs
crates/samlify/tests/: alias.rs  reexport.rs
crates/samlrs/: Cargo.toml  README.md
crates/samlrs/tests/: alias.rs
docs/: standards-conformance.md
docs/agents/: issue-tracker.md  triage-labels.md
docs/architecture/: 001-naming.md  002-public-api-map.md  003-web-sso-api.md  004-single-logout-api.md  005-config-and-metadata.md  006-errors-and-validation.md  007-raw-compatibility.md  README.md
docs/migrations/: 0.2-to-0.3.md  0.3-to-0.4.md  README.md
examples/: raw_compat.rs  slo.rs  sso.rs
plans/: 011-typed-saml-api-contract.md  012-typed-config-policies.md  013-typed-browser-and-domain-models.md  014-typed-web-sso-facade.md  015-typed-single-logout-facade.md  016-docs-rs-typed-api-migration.md  017-semantic-error-taxonomy.md  018-type-narrowed-bindings-and-trackers.md  019-architecture-rfcs-validation-docs.md  020-typed-sso-validation-context.md  021-verified-metadata-trust-boundary.md  README.md
reference/upstream-samlify/: VERSION.md
scripts/: fetch-upstream-samlify.sh
source/: context.rs  entity.rs  error.rs  flow.rs  idp.rs  lib.rs  logout.rs  sp.rs  template.rs  validator.rs
source/binding/: deflate.rs  encoding.rs  post_form.rs  redirect.rs
source/crypto/: backend.rs  bergshamra.rs  enc.rs  keys.rs  mod.rs  sign.rs  verify.rs  xml_syntax.rs
source/idp/: login_response.rs
source/metadata/: generate.rs  idp.rs  mod.rs  sp.rs  write.rs
source/xml/: dom.rs  extract.rs  fields.rs  write.rs
src/: api.rs  browser.rs  config.rs  constants.rs  context.rs  entity.rs  error.rs  flow.rs  idp.rs  lib.rs  logout.rs  model.rs  raw.rs  sp.rs  template.rs  util.rs  validator.rs
src/api/: idp.rs  mod.rs  options.rs  raw_mapping.rs  slo.rs  sp.rs
src/binding/: deflate.rs  encoding.rs  escape.rs  mod.rs  post_form.rs  redirect.rs
src/browser/: bindings.rs  endpoints.rs  forms.rs  input.rs  mod.rs  outbound.rs  pending.rs
src/config/: algorithms.rs  builders.rs  credentials.rs  descriptors.rs  metadata_trust.rs  mod.rs  policies.rs
src/crypto/: backend.rs  bergshamra.rs  enc.rs  keys.rs  mod.rs  sign.rs  verify.rs  xml_syntax.rs
src/logout/: bindings.rs  creation.rs  mod.rs  parsing.rs  rendering.rs  signing.rs  tests.rs
src/metadata/: generate.rs  idp.rs  mod.rs  sp.rs
src/model/: attributes.rs  authn.rs  endpoint.rs  extract.rs  identifiers.rs  logout.rs  mod.rs  received.rs  relay.rs  session.rs  sso.rs  subject.rs  validation.rs
src/xml/: date_time.rs  dom.rs  extract.rs  fields.rs  mod.rs  profile.rs
src/xml/profile/: outbound_logout.rs
src/xml/profile/outbound_logout/: tests.rs
tests/: authn_request_options.rs  binding.rs  builder_api_contract.rs  builder_policy.rs  conformance.rs  error_taxonomy.rs  extractor_conformance.rs  flow_conformance.rs  hardening.rs  idp_tag_prefixes.rs  index_conformance.rs  issues_conformance.rs  logout_session_index.rs  metadata_signature.rs  metadata_trust.rs  namespace_version.rs  no_default_features.rs  redirect_inflate_limit.rs  robustness.rs  typed_api_contract.rs  typed_bindings.rs  typed_config.rs  typed_models.rs  typed_slo.rs  typed_sso.rs  typed_validation_context.rs  xml_document.rs  xml_injection.rs  xsw.rs
tests/fixtures/: PROVENANCE.md
