[workspace]
resolver = "2"
members = [
    "crates/opensaml",
    "crates/open-saml",
    "crates/rust-saml",
    "crates/rustsaml",
    "crates/saml-rs",
    "crates/samlify",
    "crates/samlrs",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/salasebas/opensaml-rs"
homepage = "https://github.com/salasebas/opensaml-rs"

[workspace.dependencies]
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
quick-xml = "0.40"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["std", "parsing"] }
url = "2"
uuid = { version = "1", default-features = false, features = ["v4"] }
bergshamra = "0.5.1"
opensaml = { path = "crates/opensaml", version = "0.2.0" }
samlify = { path = "crates/samlify", version = "0.2.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
