[package]
name = "saml-rs"
version = "0.1.4"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/salasebas/saml-rs"
homepage = "https://github.com/salasebas/saml-rs"
readme = "README.md"
description = "Pure-Rust SAML 2.0 Service Provider and Identity Provider support."
keywords = ["saml", "sso", "xml", "authentication"]
categories = ["authentication", "web-programming"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/source/**",
    "/tests/**",
    "/examples/**",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[lib]
name = "saml_rs"
path = "source/lib.rs"

[features]
default = ["crypto-bergshamra"]
crypto-bergshamra = ["dep:bergshamra"]

[dependencies]
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
quick-xml = "0.41"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["std", "parsing"] }
url = "2"
uuid = { version = "1", default-features = false, features = ["v4"] }
bergshamra = { version = "0.6.3", optional = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
