[package]
name = "saml-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/salasebas/saml-rs"
homepage = "https://github.com/salasebas/saml-rs"
readme = "README.md"
description = "Pure-Rust SAML 2.0 Service Provider and Identity Provider support."
keywords = ["saml", "sso", "xml", "authentication"]
categories = ["authentication", "web-programming"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/src/**",
    "/tests/**",
    "/examples/**",
    "/docs/migrations/**",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[workspace]
resolver = "2"
members = [
    "crates/opensaml",
    "crates/samlify",
    "crates/rustsaml",
    "crates/samlet",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "saml_rs"
path = "src/lib.rs"

[features]
default = ["crypto-bergshamra"]
crypto-bergshamra = ["dep:bergshamra"]

[dependencies]
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
quick-xml = "0.41"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["std", "parsing"] }
url = "2"
uuid = { version = "1", default-features = false, features = ["v4"] }
bergshamra = { version = "0.7.0", optional = true }

[lints.rust]
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
empty_docs = "warn"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
