[package]
name = "opensaml"
version = "0.2.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/salasebas/saml-rs"
homepage = "https://github.com/salasebas/saml-rs"
readme = "README.md"
description = "Maintained compatibility re-export of saml-rs."
keywords = ["saml", "sso", "xml", "authentication"]
categories = ["authentication", "web-programming"]
include = [
    "/Cargo.toml",
    "/src/**",
    "/tests/**",
    "/README.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "opensaml"
path = "src/lib.rs"

[features]
default = ["crypto-bergshamra"]
crypto-bergshamra = ["saml-rs/crypto-bergshamra"]

[dependencies]
saml-rs = { path = "../..", version = "0.2.1", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
empty_docs = "warn"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
